force-app/main/default/objects/CampaignMember/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>IF (   LeadId !=null,  Lead.Account__r.Name ,  Contact.Account.Name  )</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>