force-app/main/default/objects/CampaignMember/fields/Application_Development__c.field-meta.xml
<CustomField>
    <fullName>Application_Development__c</fullName>
    <formula>Campaign.Application_Development__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Development</label>
    <type>Checkbox</type>
</CustomField>