force-app/main/default/objects/CampaignMember/fields/Are_you_currently_using_technology__c.field-meta.xml
<CustomField>
    <fullName>Are_you_currently_using_technology__c</fullName>
    <label>Are you currently using technology?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>