force-app/main/default/objects/CampaignMember/fields/Are_you_new_to_open_source__c.field-meta.xml
<CustomField>
    <fullName>Are_you_new_to_open_source__c</fullName>
    <label>Are you new to open source?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>