force-app/main/default/objects/CampaignMember/fields/Auto_Disposition_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Auto_Disposition_Campaign__c</fullName>
    <formula>Campaign.Auto_Disposition_Allowed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Disposition Campaign</label>
    <type>Checkbox</type>
</CustomField>