force-app/main/default/objects/CampaignMember/fields/Blockchain__c.field-meta.xml
<CustomField>
    <fullName>Blockchain__c</fullName>
    <formula>Campaign.Blockchain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blockchain</label>
    <type>Checkbox</type>
</CustomField>