force-app/main/default/objects/CampaignMember/fields/Bootcamp__c.field-meta.xml
<CustomField>
    <fullName>Bootcamp__c</fullName>
    <label>Bootcamp</label>
    <length>250</length>
    <type>Text</type>
</CustomField>