force-app/main/default/objects/CampaignMember/fields/CFCD__c.field-meta.xml
<CustomField>
    <fullName>CFCD__c</fullName>
    <label>CFCD</label>
    <length>250</length>
    <type>Text</type>
</CustomField>