force-app/main/default/objects/CampaignMember/fields/CHFA__c.field-meta.xml
<CustomField>
    <fullName>CHFA__c</fullName>
    <label>CHFA</label>
    <length>250</length>
    <type>Text</type>
</CustomField>