force-app/main/default/objects/CampaignMember/fields/CHFD__c.field-meta.xml
<CustomField>
    <fullName>CHFD__c</fullName>
    <label>CHFD</label>
    <length>250</length>
    <type>Text</type>
</CustomField>