force-app/main/default/objects/CampaignMember/fields/Chinese__c.field-meta.xml
<CustomField>
    <fullName>Chinese__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chinese Language Selected</label>
    <type>Checkbox</type>
</CustomField>