force-app/main/default/objects/CampaignMember/fields/CHSA__c.field-meta.xml
<CustomField>
    <fullName>CHSA__c</fullName>
    <label>CHSA</label>
    <length>250</length>
    <type>Text</type>
</CustomField>