force-app/main/default/objects/CampaignMember/fields/CKA__c.field-meta.xml
<CustomField>
    <fullName>CKA__c</fullName>
    <label>CKA</label>
    <length>250</length>
    <type>Text</type>
</CustomField>