force-app/main/default/objects/CampaignMember/fields/CKAD__c.field-meta.xml
<CustomField>
    <fullName>CKAD__c</fullName>
    <label>CKAD</label>
    <length>250</length>
    <type>Text</type>
</CustomField>