force-app/main/default/objects/CampaignMember/fields/CKS__c.field-meta.xml
<CustomField>
    <fullName>CKS__c</fullName>
    <label>CKS</label>
    <length>250</length>
    <type>Text</type>
</CustomField>