force-app/main/default/objects/CampaignMember/fields/Cloud_Containers__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Containers__c</fullName>
    <formula>Campaign.Cloud_Containers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cloud &amp; Containers</label>
    <type>Checkbox</type>
</CustomField>