force-app/main/default/objects/CampaignMember/fields/CNCFSubscriptionPrefer_EnglishOrChinese__c.field-meta.xml
<CustomField>
    <fullName>CNCFSubscriptionPrefer_EnglishOrChinese__c</fullName>
    <label>CNCFSubscriptionPrefer(EnglishOrChinese)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>