force-app/main/default/objects/CampaignMember/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>