force-app/main/default/objects/CampaignMember/fields/Company_Domain__c.field-meta.xml
<CustomField>
    <fullName>Company_Domain__c</fullName>
    <formula>Contact.Account.Account_Domain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Domain</label>
    <type>Text</type>
</CustomField>