force-app/main/default/objects/CampaignMember/fields/Contact_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Created_Date__c</fullName>
    <formula>Contact.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Created Date</label>
    <type>DateTime</type>
</CustomField>