force-app/main/default/objects/CampaignMember/fields/Contact_Email_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Bounce__c</fullName>
    <formula>Contact.MC_Hard_Bounce__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email Bounce</label>
    <type>Checkbox</type>
</CustomField>