force-app/main/default/objects/CampaignMember/fields/Contact_EMail_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Contact_EMail_Opt_Out__c</fullName>
    <formula>Contact.HasOptedOutOfEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact EMail Opt-Out</label>
    <type>Checkbox</type>
</CustomField>