force-app/main/default/objects/CampaignMember/fields/Contributors_are_currently_involved__c.field-meta.xml
<CustomField>
    <fullName>Contributors_are_currently_involved__c</fullName>
    <label>Contributors are currently involved ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>