force-app/main/default/objects/CampaignMember/fields/Converted_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Converted_Contact_ID__c</fullName>
    <formula>IF( ISBLANK( LeadId ) ,  ContactId , Lead.ConvertedContactId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Contact ID</label>
    <type>Text</type>
</CustomField>