force-app/main/default/objects/CampaignMember/fields/Converted_Lead__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead__c</fullName>
    <formula>Lead.IsConverted</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Lead</label>
    <type>Checkbox</type>
</CustomField>