force-app/main/default/objects/CampaignMember/fields/COP__c.field-meta.xml
<CustomField>
    <fullName>COP__c</fullName>
    <label>COP</label>
    <length>250</length>
    <type>Text</type>
</CustomField>