force-app/main/default/objects/CampaignMember/fields/CountOfEnrollments__c.field-meta.xml
<CustomField>
    <fullName>CountOfEnrollments__c</fullName>
    <description>This field will store the count of enrollments that user enrolled for.</description>
    <label>Count Of Enrollments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>