force-app/main/default/objects/CampaignMember/fields/Course_Interest__c.field-meta.xml
<CustomField>
    <fullName>Course_Interest__c</fullName>
    <label>Course Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Please select a course</fullName>
                <default>true</default>
                <label>Please select a course</label>
            </value>
            <value>
                <fullName>LFS541 Introduction to Linux KVM Virtualization</fullName>
            </value>
            <value>
                <fullName>LFS540 Linux KVM Virtualization</fullName>
            </value>
            <value>
                <fullName>LFS520 OpenStack Architecture and Deployment</fullName>
            </value>
            <value>
                <fullName>LFS430 Linux Enterprise Automation</fullName>
            </value>
            <value>
                <fullName>LFS426 Linux Performance Tuning</fullName>
            </value>
            <value>
                <fullName>LFS425 Linux Performance Tuning Crash Course</fullName>
            </value>
            <value>
                <fullName>LFS422 High Availability Linux Architecture</fullName>
            </value>
            <value>
                <fullName>LFS416 Linux Security</fullName>
            </value>
            <value>
                <fullName>LFS252 OpenStack Administration Fundamentals</fullName>
            </value>
            <value>
                <fullName>LFS230 Linux Network Management</fullName>
            </value>
            <value>
                <fullName>LFS220 Linux System Administration</fullName>
            </value>
            <value>
                <fullName>LFS201 Essentials of System Administration</fullName>
            </value>
            <value>
                <fullName>LFS101 Introduction to Linux</fullName>
            </value>
            <value>
                <fullName>LFD432 Optimizing Linux Device Drivers for Power Efficiency</fullName>
            </value>
            <value>
                <fullName>LFD415 Inside Android: An Intro to Android Internals</fullName>
            </value>
            <value>
                <fullName>LFD414 Introduction to Embedded Android Development</fullName>
            </value>
            <value>
                <fullName>LFD411 Embedded Linux Development</fullName>
            </value>
            <value>
                <fullName>LFD410 Embedded Linux Development: A Crash Course</fullName>
            </value>
            <value>
                <fullName>LFD405 Embedded Linux Development with the Yocto Project</fullName>
            </value>
            <value>
                <fullName>LFD404 Building Embedded Linux with the Yocto Project: Crash Course</fullName>
            </value>
            <value>
                <fullName>LFD331 Developing Linux Device Drivers</fullName>
            </value>
            <value>
                <fullName>LFD320 Linux Kernel Internals and Debugging</fullName>
            </value>
            <value>
                <fullName>LF312 Developing Applications For Linux</fullName>
            </value>
            <value>
                <fullName>LFD262 Developing with GIT</fullName>
            </value>
            <value>
                <fullName>LFD211 Introduction to Linux For Developers</fullName>
            </value>
            <value>
                <fullName>LFD205 How to Participate with the Linux Community</fullName>
            </value>
            <value>
                <fullName>LFC288 Implementation and Management of Open Source Compliance</fullName>
            </value>
            <value>
                <fullName>LFC284 Overview of Open Source Compliance End-to-End Process</fullName>
            </value>
            <value>
                <fullName>LFC281 Executive Review of Open Source Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>