force-app/main/default/objects/CampaignMember/fields/Date_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Email_Sent__c</fullName>
    <label>Date Email Sent</label>
    <length>250</length>
    <type>Text</type>
</CustomField>