force-app/main/default/objects/CampaignMember/fields/Date_LFX_Contact_Username_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_LFX_Contact_Username_Created__c</fullName>
    <label>Date LFX Contact Username Created</label>
    <type>Date</type>
</CustomField>