force-app/main/default/objects/CampaignMember/fields/DevOps_Site_Reliability__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Site_Reliability__c</fullName>
    <formula>Campaign.DevOps_Site_Reliability__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DevOps &amp; Site Reliability</label>
    <type>Checkbox</type>
</CustomField>