force-app/main/default/objects/CampaignMember/fields/Do_Not_Include_in_Master_Subscriber_List__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Include_in_Master_Subscriber_List__c</fullName>
    <formula>Campaign.Do_Not_Include_in_Master_Subscriber_List__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Do Not Include in Master Subscriber List</label>
    <type>Checkbox</type>
</CustomField>