force-app/main/default/objects/CampaignMember/fields/Embedded_Development__c.field-meta.xml
<CustomField>
    <fullName>Embedded_Development__c</fullName>
    <formula>Campaign.Embedded_Development__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Embedded Development</label>
    <type>Checkbox</type>
</CustomField>