force-app/main/default/objects/CampaignMember/fields/Employee_Size__c.field-meta.xml
<CustomField>
    <fullName>Employee_Size__c</fullName>
    <inlineHelpText>Member Inquiry Form Submission</inlineHelpText>
    <label>Employee Size</label>
    <length>250</length>
    <type>Text</type>
</CustomField>