force-app/main/default/objects/CampaignMember/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <label>Employees</label>
    <length>50</length>
    <type>Text</type>
</CustomField>