force-app/main/default/objects/CampaignMember/fields/Enrollment_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Completion_Date__c</fullName>
    <label>Enrollment Completion Date</label>
    <length>250</length>
    <type>Text</type>
</CustomField>