force-app/main/default/objects/CampaignMember/fields/Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Date__c</fullName>
    <inlineHelpText>Date of last enrollment as related to campaign</inlineHelpText>
    <label>Enrollment Date</label>
    <length>250</length>
    <type>Text</type>
</CustomField>