force-app/main/default/objects/CampaignMember/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <label>Form Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>