force-app/main/default/objects/CampaignMember/fields/Global_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Global_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Opt-In</label>
    <type>Checkbox</type>
</CustomField>