force-app/main/default/objects/CampaignMember/fields/HubSpot__c.field-meta.xml
<CustomField>
    <fullName>HubSpot__c</fullName>
    <formula>Campaign.Hubspot__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HubSpot</label>
    <type>Checkbox</type>
</CustomField>