force-app/main/default/objects/CampaignMember/fields/Hyperledger_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Hyperledger_Membership_Type__c</fullName>
    <label>Hyperledger Membership Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>