force-app/main/default/objects/CampaignMember/fields/Interested_in_Host_Communications__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Host_Communications__c</fullName>
    <label>Interested in Host Communications</label>
    <length>250</length>
    <type>Text</type>
</CustomField>