force-app/main/default/objects/CampaignMember/fields/Interested_in_Speaking__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Speaking__c</fullName>
    <label>Interested in Speaking?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>