force-app/main/default/objects/CampaignMember/fields/Is_the_code_current_hosted_publicly_if__c.field-meta.xml
<CustomField>
    <fullName>Is_the_code_current_hosted_publicly_if__c</fullName>
    <label>Is the code current hosted publicly, if</label>
    <length>255</length>
    <type>Text</type>
</CustomField>