force-app/main/default/objects/CampaignMember/fields/JSNAD__c.field-meta.xml
<CustomField>
    <fullName>JSNAD__c</fullName>
    <label>JSNAD</label>
    <length>250</length>
    <type>Text</type>
</CustomField>