force-app/main/default/objects/CampaignMember/fields/JSNSD__c.field-meta.xml
<CustomField>
    <fullName>JSNSD__c</fullName>
    <label>JSNSD</label>
    <length>250</length>
    <type>Text</type>
</CustomField>