force-app/main/default/objects/CampaignMember/fields/Last_Date_Email_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_Email_Bounced__c</fullName>
    <label>Last Date Email Bounced</label>
    <length>250</length>
    <type>Text</type>
</CustomField>