force-app/main/default/objects/CampaignMember/fields/Lead_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_By__c</fullName>
    <formula>Lead.CreatedBy.FirstName+&apos; &apos;+ Lead.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Created By</label>
    <type>Text</type>
</CustomField>