force-app/main/default/objects/CampaignMember/fields/Lead_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date__c</fullName>
    <formula>Lead.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Created Date</label>
    <type>DateTime</type>
</CustomField>