force-app/main/default/objects/CampaignMember/fields/Lead_Email_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Lead_Email_Bounce__c</fullName>
    <formula>Lead.MC_Hard_Bounce__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Email Bounce</label>
    <type>Checkbox</type>
</CustomField>