force-app/main/default/objects/CampaignMember/fields/Lead_EMail_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Lead_EMail_Opt_Out__c</fullName>
    <formula>Lead.HasOptedOutOfEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead EMail Opt-Out</label>
    <type>Checkbox</type>
</CustomField>