force-app/main/default/objects/CampaignMember/fields/LF_Training__c.field-meta.xml
<CustomField>
    <fullName>LF_Training__c</fullName>
    <formula>Campaign.LF_Training__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LF Training</label>
    <type>Checkbox</type>
</CustomField>