force-app/main/default/objects/CampaignMember/fields/LFCE__c.field-meta.xml
<CustomField>
    <fullName>LFCE__c</fullName>
    <label>LFCE</label>
    <length>250</length>
    <type>Text</type>
</CustomField>