force-app/main/default/objects/CampaignMember/fields/LFCS__c.field-meta.xml
<CustomField>
    <fullName>LFCS__c</fullName>
    <label>LFCS</label>
    <length>250</length>
    <type>Text</type>
</CustomField>