force-app/main/default/objects/CampaignMember/fields/LFD102__c.field-meta.xml
<CustomField>
    <fullName>LFD102__c</fullName>
    <label>LFD102</label>
    <length>250</length>
    <type>Text</type>
</CustomField>