force-app/main/default/objects/CampaignMember/fields/LFD103__c.field-meta.xml
<CustomField>
    <fullName>LFD103__c</fullName>
    <label>LFD103</label>
    <length>250</length>
    <type>Text</type>
</CustomField>