force-app/main/default/objects/CampaignMember/fields/LFD104__c.field-meta.xml
<CustomField>
    <fullName>LFD104__c</fullName>
    <label>LFD104</label>
    <length>250</length>
    <type>Text</type>
</CustomField>