force-app/main/default/objects/CampaignMember/fields/LFS101__c.field-meta.xml
<CustomField>
    <fullName>LFS101__c</fullName>
    <label>LFS101</label>
    <length>250</length>
    <type>Text</type>
</CustomField>