force-app/main/default/objects/CampaignMember/fields/LFS132__c.field-meta.xml
<CustomField>
    <fullName>LFS132__c</fullName>
    <label>LFS132</label>
    <length>250</length>
    <type>Text</type>
</CustomField>