force-app/main/default/objects/CampaignMember/fields/LFS141__c.field-meta.xml
<CustomField>
    <fullName>LFS141__c</fullName>
    <label>LFS141</label>
    <length>250</length>
    <type>Text</type>
</CustomField>