force-app/main/default/objects/CampaignMember/fields/LFW211__c.field-meta.xml
<CustomField>
    <fullName>LFW211__c</fullName>
    <label>LFW211</label>
    <length>250</length>
    <type>Text</type>
</CustomField>