force-app/main/default/objects/CampaignMember/fields/LFW212__c.field-meta.xml
<CustomField>
    <fullName>LFW212__c</fullName>
    <label>LFW212</label>
    <length>250</length>
    <type>Text</type>
</CustomField>