force-app/main/default/objects/CampaignMember/fields/LFX_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>LFX_Campaign_Source__c</fullName>
    <label>LFX Campaign Source</label>
    <length>250</length>
    <type>Text</type>
</CustomField>