force-app/main/default/objects/CampaignMember/fields/LFX_Contact_Username__c.field-meta.xml
<CustomField>
    <fullName>LFX_Contact_Username__c</fullName>
    <formula>Contact.Username__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LFX Contact Username</label>
    <type>Text</type>
</CustomField>