force-app/main/default/objects/CampaignMember/fields/LFX_Lead_Username__c.field-meta.xml
<CustomField>
    <fullName>LFX_Lead_Username__c</fullName>
    <formula>Lead.Username__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LFX Lead Username</label>
    <type>Text</type>
</CustomField>