force-app/main/default/objects/CampaignMember/fields/LFXProject__c.field-meta.xml
<CustomField>
    <fullName>LFXProject__c</fullName>
    <label>LFX Project</label>
    <length>250</length>
    <type>Text</type>
</CustomField>