force-app/main/default/objects/CampaignMember/fields/Link_to_Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Campaign_Member__c</fullName>
    <description>Salesforce does not provide a native way to link directly to a Campaign Member record from a Campaign Member report, so this field was added as a workaround.  (It should not be included on page layouts.)</description>
    <formula>HYPERLINK(
&quot;https://linuxfoundation.lightning.force.com/lightning/r/CampaignMember/&quot;+CASESAFEID(Id)+&quot;/view&quot;,
&quot;View Campaign Member&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Campaign Member</label>
    <type>Text</type>
</CustomField>