force-app/main/default/objects/CampaignMember/fields/Linux_Kernel_Development__c.field-meta.xml
<CustomField>
    <fullName>Linux_Kernel_Development__c</fullName>
    <formula>Campaign.Linux_Kernel_Development__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linux Kernel Development</label>
    <type>Checkbox</type>
</CustomField>