force-app/main/default/objects/CampaignMember/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <label>Logo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>