force-app/main/default/objects/CampaignMember/fields/MC_CampaignID__c.field-meta.xml
<CustomField>
    <fullName>MC_CampaignID__c</fullName>
    <formula>Campaign.MCCampaignID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC CampaignID</label>
    <type>Text</type>
</CustomField>