force-app/main/default/objects/CampaignMember/fields/MC_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Contact_ID__c</fullName>
    <formula>Contact.MC_Contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Contact ID</label>
    <type>Text</type>
</CustomField>