force-app/main/default/objects/CampaignMember/fields/MC_Project_Role_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>MC_Project_Role_Subscriptions__c</fullName>
    <label>MC Project Role Subscriptions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voting Contact</fullName>
            </value>
            <value>
                <fullName>Marketing Contact</fullName>
            </value>
            <value>
                <fullName>Marketing Contact 2</fullName>
            </value>
            <value>
                <fullName>Marketing Contact 3</fullName>
            </value>
            <value>
                <fullName>Technical Contact</fullName>
            </value>
            <value>
                <fullName>Technical Contact 2</fullName>
            </value>
            <value>
                <fullName>Technical Contact 3</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>Billing Contact 2</fullName>
            </value>
            <value>
                <fullName>Billing Contact 3</fullName>
            </value>
            <value>
                <fullName>Press Contact</fullName>
            </value>
            <value>
                <fullName>Legal Contact</fullName>
            </value>
            <value>
                <fullName>Event Sponsorship</fullName>
            </value>
            <value>
                <fullName>PO Contact</fullName>
            </value>
            <value>
                <fullName>Authorized Signatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>