force-app/main/default/objects/CampaignMember/fields/MC_Unsubscribe__c.field-meta.xml
<CustomField>
    <fullName>MC_Unsubscribe__c</fullName>
    <label>MC Unsubscribe</label>
    <length>250</length>
    <type>Text</type>
</CustomField>