force-app/main/default/objects/CampaignMember/fields/Meeting_Attended__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will be set from the Meeting Attendee record.</inlineHelpText>
    <label>Meeting Attended?</label>
    <type>Checkbox</type>
</CustomField>