force-app/main/default/objects/CampaignMember/fields/Member_Inquiry_Comments__c.field-meta.xml
<CustomField>
    <fullName>Member_Inquiry_Comments__c</fullName>
    <inlineHelpText>Member Inquiry Form Comments</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>