force-app/main/default/objects/CampaignMember/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <label>Interested in Membership Info</label>
    <length>250</length>
    <type>Text</type>
</CustomField>