force-app/main/default/objects/CampaignMember/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <inlineHelpText>Member Inquiry Form Submission</inlineHelpText>
    <label>Membership Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>