force-app/main/default/objects/CampaignMember/fields/Net_New_LFX_ID__c.field-meta.xml
<CustomField>
    <fullName>Net_New_LFX_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Net New LFX ID</label>
    <type>Checkbox</type>
</CustomField>