force-app/main/default/objects/CampaignMember/fields/Networking__c.field-meta.xml
<CustomField>
    <fullName>Networking__c</fullName>
    <formula>Campaign.Networking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Networking</label>
    <type>Checkbox</type>
</CustomField>