force-app/main/default/objects/CampaignMember/fields/New_to_Open_Source__c.field-meta.xml
<CustomField>
    <fullName>New_to_Open_Source__c</fullName>
    <description>Member Inquiry Form Submission</description>
    <label>New to Open Source?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>