force-app/main/default/objects/CampaignMember/fields/Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Newsletter__c</fullName>
    <label>Subscribe to Newsletter</label>
    <length>250</length>
    <type>Text</type>
</CustomField>