force-app/main/default/objects/CampaignMember/fields/Node_js_Development__c.field-meta.xml
<CustomField>
    <fullName>Node_js_Development__c</fullName>
    <formula>Campaign.Node_js_Development__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Node.js Development</label>
    <type>Checkbox</type>
</CustomField>