force-app/main/default/objects/CampaignMember/fields/Number_of_Contributors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contributors__c</fullName>
    <label>Number of Contributors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>