force-app/main/default/objects/CampaignMember/fields/Number_of_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Registrations__c</fullName>
    <label>Number of Registrations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>