force-app/main/default/objects/CampaignMember/fields/Open_Source_License__c.field-meta.xml
<CustomField>
    <fullName>Open_Source_License__c</fullName>
    <label>Open Source License</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>