force-app/main/default/objects/CampaignMember/fields/Parent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Parent_Campaign__c</fullName>
    <formula>Campaign.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Campaign</label>
    <type>Text</type>
</CustomField>