force-app/main/default/objects/CampaignMember/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>Campaign.Project_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project</label>
    <type>Text</type>
</CustomField>