force-app/main/default/objects/CampaignMember/fields/Project_Member__c.field-meta.xml
<CustomField>
    <fullName>Project_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Member of the Project associated to the Campaign</inlineHelpText>
    <label>Project Member?</label>
    <type>Checkbox</type>
</CustomField>