force-app/main/default/objects/CampaignMember/fields/Project_Name_and_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_and_Description__c</fullName>
    <label>Project Name and Description</label>
    <type>TextArea</type>
</CustomField>